# app/Models/Carrier.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Carrier extends Model
+{
+    use HasFactory;
+
+    protected $table = 'Transportistas';
+
+
+    protected $hidden = [
+     
+  
+    ];
+}
